# hvac-bot

./: .gitignore  .railwayignore  DEPLOY.md  Dockerfile  SETUP.md  claude.md  docker-compose.yml  render.yaml
backend/: .env.example  .railwayignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_feedback_rating.py  003_add_diagnostic_and_improvement_tables.py
backend/api/: __init__.py  admin_routes.py  dependencies.py  openclaw_routes.py  routes.py
backend/core/: __init__.py  gemini.py  guardrails.py  llm.py  logging.py
backend/docs/: document-parsing.md  vertex-ai-integration.md
backend/models/: __init__.py  analytics.py  base.py  conversation.py  diagnostic.py  experiment.py  manual.py  user.py
backend/services/analytics/: __init__.py  knowledge_gaps.py  rag_analytics.py
backend/services/experiments/: __init__.py  testing.py
backend/services/finetuning/: __init__.py  exporter.py
backend/services/gcp/: __init__.py  document_ai.py  embeddings.py  rag_engine.py  vector_search.py
backend/services/improvement/: __init__.py  correction_processor.py  feedback_aggregator.py
backend/services/ingestion/: __init__.py  chunker.py  parser.py
backend/services/openclaw/: __init__.py  user_sync.py
backend/services/rag/: __init__.py  diagnostic_engine.py  embedder.py  generator.py  pipeline.py  query_processor.py  (+4 more)
backend/tests/: __init__.py  test_correction_processor.py  test_diagnostic_engine.py  test_terminology.py
backend/utils/: __init__.py  hashing.py  text.py  validation.py
(+43 files in other folders)
